k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperclip
  namespace: paperclip
spec:
  type: ClusterIP
  ports:
  - port: 3100
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: paperclip
